// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when generating xsd and comparing it to data standard 2.0 authoritative artifacts should have complex types in the correct order 1`] = `
Array [
  "===== Domain Entities =====",
  "AcademicWeek",
  "Account",
  "AccountabilityRating",
  "Actual",
  "Assessment",
  "AssessmentFamily",
  "AssessmentItem",
  "BellSchedule",
  "Budget",
  "CalendarDate",
  "ClassPeriod",
  "Cohort",
  "CompetencyObjective",
  "ContractedStaff",
  "Course",
  "CourseOffering",
  "CourseTranscript",
  "DisciplineAction",
  "DisciplineIncident",
  "EducationContent",
  "EducationOrganization",
  "EducationOrganizationNetwork",
  "EducationServiceCenter",
  "Grade",
  "GradebookEntry",
  "GradingPeriod",
  "GraduationPlan",
  "Intervention",
  "InterventionPrescription",
  "InterventionStudy",
  "LearningObjective",
  "LearningStandard",
  "LeaveEvent",
  "LocalEducationAgency",
  "Location",
  "ObjectiveAssessment",
  "OpenStaffPosition",
  "Parent",
  "Payroll",
  "PostSecondaryEvent",
  "Program",
  "ReportCard",
  "RestraintEvent",
  "School",
  "Section",
  "SectionAttendanceTakenEvent",
  "Session",
  "Staff",
  "StateEducationAgency",
  "Student",
  "StudentAcademicRecord",
  "StudentAssessment",
  "StudentCompetencyObjective",
  "StudentGradebookEntry",
  "StudentInterventionAttendanceEvent",
  "StudentLearningObjective",
  "StudentProgramAttendanceEvent",
  "StudentSchoolAttendanceEvent",
  "StudentSectionAttendanceEvent",
  "===== Descriptors =====",
  "AcademicSubjectDescriptor",
  "AccommodationDescriptor",
  "AccountCodeDescriptor",
  "AchievementCategoryDescriptor",
  "AdministrativeFundingControlDescriptor",
  "AssessmentCategoryDescriptor",
  "AssessmentIdentificationSystemDescriptor",
  "AssessmentPeriodDescriptor",
  "AttendanceEventCategoryDescriptor",
  "BehaviorDescriptor",
  "CalendarEventDescriptor",
  "ClassroomPositionDescriptor",
  "CompetencyLevelDescriptor",
  "ContinuationOfServicesReasonDescriptor",
  "CountryDescriptor",
  "CourseIdentificationSystemDescriptor",
  "CredentialFieldDescriptor",
  "DiagnosisDescriptor",
  "DisabilityDescriptor",
  "DisciplineDescriptor",
  "EducationOrganizationIdentificationSystemDescriptor",
  "EmploymentStatusDescriptor",
  "EntryTypeDescriptor",
  "ExitWithdrawTypeDescriptor",
  "GradeLevelDescriptor",
  "GradingPeriodDescriptor",
  "GraduationPlanTypeDescriptor",
  "LanguageDescriptor",
  "LevelDescriptor",
  "LevelOfEducationDescriptor",
  "LimitedEnglishProficiencyDescriptor",
  "PerformanceLevelDescriptor",
  "ProgramAssignmentDescriptor",
  "ProgramCharacteristicDescriptor",
  "ReasonExitedDescriptor",
  "ReporterDescriptionDescriptor",
  "ResidencyStatusDescriptor",
  "ResponsibilityDescriptor",
  "SchoolFoodServicesEligibilityDescriptor",
  "SectionCharacteristicDescriptor",
  "SeparationReasonDescriptor",
  "ServiceDescriptor",
  "SpecialEducationSettingDescriptor",
  "StaffClassificationDescriptor",
  "StaffIdentificationSystemDescriptor",
  "StudentCharacteristicDescriptor",
  "StudentIdentificationSystemDescriptor",
  "TeachingCredentialDescriptor",
  "TermDescriptor",
  "WeaponDescriptor",
  "===== Associations =====",
  "EducationOrganizationInterventionPrescriptionAssociation",
  "EducationOrganizationNetworkAssociation",
  "EducationOrganizationPeerAssociation",
  "FeederSchoolAssociation",
  "StaffCohortAssociation",
  "StaffEducationOrganizationAssignmentAssociation",
  "StaffEducationOrganizationEmploymentAssociation",
  "StaffProgramAssociation",
  "StaffSchoolAssociation",
  "StaffSectionAssociation",
  "StudentCohortAssociation",
  "StudentCTEProgramAssociation",
  "StudentDisciplineIncidentAssociation",
  "StudentEducationOrganizationAssociation",
  "StudentInterventionAssociation",
  "StudentMigrantEducationProgramAssociation",
  "StudentParentAssociation",
  "StudentProgramAssociation",
  "StudentSchoolAssociation",
  "StudentSectionAssociation",
  "StudentSpecialEducationProgramAssociation",
  "StudentTitleIPartAProgramAssociation",
  "===== Base Types (borrowed from NEIM standards) =====",
  "ComplexObjectType",
  "DescriptorReferenceType",
  "DescriptorType",
  "ReferenceType",
  "===== Extended Reference Types =====",
  "AcademicWeekIdentityType",
  "AcademicWeekReferenceType",
  "AccountabilityRatingIdentityType",
  "AccountabilityRatingReferenceType",
  "AccountIdentityType",
  "AccountReferenceType",
  "ActualIdentityType",
  "ActualReferenceType",
  "AssessmentFamilyIdentityType",
  "AssessmentFamilyLookupType",
  "AssessmentFamilyReferenceType",
  "AssessmentIdentityType",
  "AssessmentItemIdentityType",
  "AssessmentItemReferenceType",
  "AssessmentLookupType",
  "AssessmentReferenceType",
  "BellScheduleIdentityType",
  "BellScheduleReferenceType",
  "BudgetIdentityType",
  "BudgetReferenceType",
  "CalendarDateIdentityType",
  "CalendarDateReferenceType",
  "ClassPeriodIdentityType",
  "ClassPeriodReferenceType",
  "CohortIdentityType",
  "CohortReferenceType",
  "CompetencyObjectiveIdentityType",
  "CompetencyObjectiveReferenceType",
  "ContractedStaffIdentityType",
  "ContractedStaffReferenceType",
  "CourseIdentityType",
  "CourseLookupType",
  "CourseOfferingIdentityType",
  "CourseOfferingReferenceType",
  "CourseReferenceType",
  "CourseTranscriptIdentityType",
  "CourseTranscriptReferenceType",
  "DisciplineActionIdentityType",
  "DisciplineActionReferenceType",
  "DisciplineIncidentIdentityType",
  "DisciplineIncidentReferenceType",
  "EducationContentIdentityType",
  "EducationContentReferenceType",
  "EducationOrganizationIdentityType",
  "EducationOrganizationInterventionPrescriptionAssociationIdentityType",
  "EducationOrganizationInterventionPrescriptionAssociationReferenceType",
  "EducationOrganizationLookupType",
  "EducationOrganizationNetworkAssociationIdentityType",
  "EducationOrganizationNetworkAssociationReferenceType",
  "EducationOrganizationNetworkIdentityType",
  "EducationOrganizationNetworkLookupType",
  "EducationOrganizationNetworkReferenceType",
  "EducationOrganizationPeerAssociationIdentityType",
  "EducationOrganizationPeerAssociationReferenceType",
  "EducationOrganizationReferenceType",
  "EducationServiceCenterIdentityType",
  "EducationServiceCenterLookupType",
  "EducationServiceCenterReferenceType",
  "FeederSchoolAssociationIdentityType",
  "FeederSchoolAssociationReferenceType",
  "GradebookEntryIdentityType",
  "GradebookEntryLookupType",
  "GradebookEntryReferenceType",
  "GradeIdentityType",
  "GradeReferenceType",
  "GradingPeriodIdentityType",
  "GradingPeriodReferenceType",
  "GraduationPlanIdentityType",
  "GraduationPlanReferenceType",
  "InterventionIdentityType",
  "InterventionPrescriptionIdentityType",
  "InterventionPrescriptionReferenceType",
  "InterventionReferenceType",
  "InterventionStudyIdentityType",
  "InterventionStudyReferenceType",
  "LearningObjectiveIdentityType",
  "LearningObjectiveReferenceType",
  "LearningStandardIdentityType",
  "LearningStandardLookupType",
  "LearningStandardReferenceType",
  "LeaveEventIdentityType",
  "LeaveEventReferenceType",
  "LocalEducationAgencyIdentityType",
  "LocalEducationAgencyLookupType",
  "LocalEducationAgencyReferenceType",
  "LocationIdentityType",
  "LocationReferenceType",
  "ObjectiveAssessmentIdentityType",
  "ObjectiveAssessmentReferenceType",
  "OpenStaffPositionIdentityType",
  "OpenStaffPositionReferenceType",
  "ParentIdentityType",
  "ParentLookupType",
  "ParentReferenceType",
  "PayrollIdentityType",
  "PayrollReferenceType",
  "PostSecondaryEventIdentityType",
  "PostSecondaryEventReferenceType",
  "ProgramIdentityType",
  "ProgramLookupType",
  "ProgramReferenceType",
  "ReportCardIdentityType",
  "ReportCardReferenceType",
  "RestraintEventIdentityType",
  "RestraintEventReferenceType",
  "SchoolIdentityType",
  "SchoolLookupType",
  "SchoolReferenceType",
  "SectionAttendanceTakenEventIdentityType",
  "SectionAttendanceTakenEventReferenceType",
  "SectionIdentityType",
  "SectionLookupType",
  "SectionReferenceType",
  "SessionIdentityType",
  "SessionLookupType",
  "SessionReferenceType",
  "StaffCohortAssociationIdentityType",
  "StaffCohortAssociationReferenceType",
  "StaffEducationOrganizationAssignmentAssociationIdentityType",
  "StaffEducationOrganizationAssignmentAssociationReferenceType",
  "StaffEducationOrganizationEmploymentAssociationIdentityType",
  "StaffEducationOrganizationEmploymentAssociationReferenceType",
  "StaffIdentityType",
  "StaffLookupType",
  "StaffProgramAssociationIdentityType",
  "StaffProgramAssociationReferenceType",
  "StaffReferenceType",
  "StaffSchoolAssociationIdentityType",
  "StaffSchoolAssociationReferenceType",
  "StaffSectionAssociationIdentityType",
  "StaffSectionAssociationReferenceType",
  "StateEducationAgencyIdentityType",
  "StateEducationAgencyLookupType",
  "StateEducationAgencyReferenceType",
  "StudentAcademicRecordIdentityType",
  "StudentAcademicRecordReferenceType",
  "StudentAssessmentIdentityType",
  "StudentAssessmentReferenceType",
  "StudentCohortAssociationIdentityType",
  "StudentCohortAssociationReferenceType",
  "StudentCompetencyObjectiveIdentityType",
  "StudentCompetencyObjectiveReferenceType",
  "StudentCTEProgramAssociationIdentityType",
  "StudentCTEProgramAssociationReferenceType",
  "StudentDisciplineIncidentAssociationIdentityType",
  "StudentDisciplineIncidentAssociationReferenceType",
  "StudentEducationOrganizationAssociationIdentityType",
  "StudentEducationOrganizationAssociationReferenceType",
  "StudentGradebookEntryIdentityType",
  "StudentGradebookEntryReferenceType",
  "StudentIdentityType",
  "StudentInterventionAssociationIdentityType",
  "StudentInterventionAssociationReferenceType",
  "StudentInterventionAttendanceEventIdentityType",
  "StudentInterventionAttendanceEventReferenceType",
  "StudentLearningObjectiveIdentityType",
  "StudentLearningObjectiveReferenceType",
  "StudentLookupType",
  "StudentMigrantEducationProgramAssociationIdentityType",
  "StudentMigrantEducationProgramAssociationReferenceType",
  "StudentParentAssociationIdentityType",
  "StudentParentAssociationReferenceType",
  "StudentProgramAssociationIdentityType",
  "StudentProgramAssociationReferenceType",
  "StudentProgramAttendanceEventIdentityType",
  "StudentProgramAttendanceEventReferenceType",
  "StudentReferenceType",
  "StudentSchoolAssociationIdentityType",
  "StudentSchoolAssociationReferenceType",
  "StudentSchoolAttendanceEventIdentityType",
  "StudentSchoolAttendanceEventReferenceType",
  "StudentSectionAssociationIdentityType",
  "StudentSectionAssociationReferenceType",
  "StudentSectionAttendanceEventIdentityType",
  "StudentSectionAttendanceEventReferenceType",
  "StudentSpecialEducationProgramAssociationIdentityType",
  "StudentSpecialEducationProgramAssociationReferenceType",
  "StudentTitleIPartAProgramAssociationIdentityType",
  "StudentTitleIPartAProgramAssociationReferenceType",
  "===== Extended Descriptor Reference Types =====",
  "AcademicSubjectDescriptorReferenceType",
  "AccommodationDescriptorReferenceType",
  "AccountCodeDescriptorReferenceType",
  "AchievementCategoryDescriptorReferenceType",
  "AdministrativeFundingControlDescriptorReferenceType",
  "AssessmentCategoryDescriptorReferenceType",
  "AssessmentIdentificationSystemDescriptorReferenceType",
  "AssessmentPeriodDescriptorReferenceType",
  "AttendanceEventCategoryDescriptorReferenceType",
  "BehaviorDescriptorReferenceType",
  "CalendarEventDescriptorReferenceType",
  "ClassroomPositionDescriptorReferenceType",
  "CompetencyLevelDescriptorReferenceType",
  "ContinuationOfServicesReasonDescriptorReferenceType",
  "CountryDescriptorReferenceType",
  "CourseIdentificationSystemDescriptorReferenceType",
  "CredentialFieldDescriptorReferenceType",
  "DiagnosisDescriptorReferenceType",
  "DisabilityDescriptorReferenceType",
  "DisciplineDescriptorReferenceType",
  "EducationOrganizationIdentificationSystemDescriptorReferenceType",
  "EmploymentStatusDescriptorReferenceType",
  "EntryTypeDescriptorReferenceType",
  "ExitWithdrawTypeDescriptorReferenceType",
  "GradeLevelDescriptorReferenceType",
  "GradingPeriodDescriptorReferenceType",
  "GraduationPlanTypeDescriptorReferenceType",
  "LanguageDescriptorReferenceType",
  "LevelDescriptorReferenceType",
  "LevelOfEducationDescriptorReferenceType",
  "LimitedEnglishProficiencyDescriptorReferenceType",
  "PerformanceLevelDescriptorReferenceType",
  "ProgramAssignmentDescriptorReferenceType",
  "ProgramCharacteristicDescriptorReferenceType",
  "ReasonExitedDescriptorReferenceType",
  "ReporterDescriptionDescriptorReferenceType",
  "ResidencyStatusDescriptorReferenceType",
  "ResponsibilityDescriptorReferenceType",
  "SchoolFoodServicesEligibilityDescriptorReferenceType",
  "SectionCharacteristicDescriptorReferenceType",
  "SeparationReasonDescriptorReferenceType",
  "ServiceDescriptorReferenceType",
  "SpecialEducationSettingDescriptorReferenceType",
  "StaffClassificationDescriptorReferenceType",
  "StaffIdentificationSystemDescriptorReferenceType",
  "StudentCharacteristicDescriptorReferenceType",
  "StudentIdentificationSystemDescriptorReferenceType",
  "TeachingCredentialDescriptorReferenceType",
  "TermDescriptorReferenceType",
  "WeaponDescriptorReferenceType",
  "===== Common Types =====",
  "AcademicHonor",
  "Achievement",
  "AdditionalCredits",
  "Address",
  "AssessmentFamilyIdentificationCode",
  "AssessmentIdentificationCode",
  "AssessmentPerformanceLevel",
  "AssessmentScore",
  "AttendanceEvent",
  "Behavior",
  "BirthData",
  "CalendarEvent",
  "Citizenship",
  "ClassRanking",
  "CohortYear",
  "ContentStandard",
  "CourseIdentificationCode",
  "Credential",
  "Credits",
  "CreditsByCourse",
  "CreditsBySubject",
  "CTEProgram",
  "Diploma",
  "Disability",
  "EducationContentSource",
  "EducationOrganizationIdentificationCode",
  "ElectronicMail",
  "EmploymentPeriod",
  "IdentificationDocument",
  "InstitutionTelephone",
  "InternationalAddress",
  "InterventionEffectiveness",
  "Language",
  "LearningStandardIdentificationCode",
  "LearningStyle",
  "LocalEducationAgencyAccountability",
  "LocalEducationAgencyFederalFunds",
  "MeetingTime",
  "Name",
  "OtherName",
  "PerformanceLevel",
  "PostSecondaryInstitution",
  "PostSecondaryInstitutionIdentificationCode",
  "ProgramParticipation",
  "Recognition",
  "RequiredAssessment",
  "ScoreResult",
  "Service",
  "ServiceProvider",
  "StaffIdentificationCode",
  "StateEducationAgencyAccountability",
  "StateEducationAgencyFederalFunds",
  "StudentAssessmentItem",
  "StudentCharacteristic",
  "StudentIdentificationCode",
  "StudentIndicator",
  "StudentObjectiveAssessment",
  "Telephone",
  "===== Enumerations and Enumerated Collections =====",
  "===== String Simple Types =====",
  "===== Numeric Simple Types =====",
]
`;

exports[`when generating xsd and comparing it to data standard 2.0 authoritative artifacts should have core with no differences 1`] = `""`;

exports[`when generating xsd and comparing it to data standard 2.0 authoritative artifacts should have schema annotation with no differences 1`] = `""`;

exports[`when generating xsd and comparing it to data standard 2.0 authoritative artifacts should have simple types in the correct order 1`] = `
Array [
  "===== Domain Entities =====",
  "===== Descriptors =====",
  "===== Associations =====",
  "===== Base Types (borrowed from NEIM standards) =====",
  "===== Extended Reference Types =====",
  "===== Extended Descriptor Reference Types =====",
  "===== Common Types =====",
  "===== Enumerations and Enumerated Collections =====",
  "AcademicHonorCategoryType",
  "AcademicSubjectMapType",
  "AccommodationMapType",
  "AchievementCategoryMapType",
  "AdditionalCreditType",
  "AddressType",
  "AdministrationEnvironmentType",
  "AdministrativeFundingControlMapType",
  "AssessmentCategoryMapType",
  "AssessmentIdentificationSystemMapType",
  "AssessmentItemCategoryType",
  "AssessmentItemResultType",
  "AssessmentReportingMethodType",
  "AttendanceEventCategoryMapType",
  "BehaviorMapType",
  "CalendarEventMapType",
  "CareerPathwayType",
  "CharterApprovalAgencyType",
  "CharterStatusType",
  "CitizenshipStatusType",
  "ClassroomPositionMapType",
  "CohortScopeType",
  "CohortType",
  "CohortYearType",
  "ContentClassType",
  "ContinuationOfServicesReasonMapType",
  "CostRateType",
  "CourseAttemptResultType",
  "CourseDefinedByType",
  "CourseGPAApplicabilityType",
  "CourseIdentificationSystemMapType",
  "CourseLevelCharacteristicType",
  "CourseRepeatCodeType",
  "CredentialType",
  "CreditType",
  "CurriculumUsedType",
  "DeliveryMethodType",
  "DiagnosisMapType",
  "DiplomaLevelType",
  "DiplomaType",
  "DisabilityCategoryType",
  "DisabilityDeterminationSourceType",
  "DisabilityMapType",
  "DisciplineActionLengthDifferenceReasonType",
  "DisciplineMapType",
  "EducationalEnvironmentType",
  "EducationOrganizationCategoryType",
  "EducationOrganizationIdentificationSystemMapType",
  "EducationPlanType",
  "ElectronicMailType",
  "EmploymentStatusMapType",
  "EntryGradeLevelReasonType",
  "EntryTypeMapType",
  "EventCircumstanceType",
  "ExitWithdrawTypeMapType",
  "GradebookEntryType",
  "GradeLevelMapType",
  "GradeType",
  "GradingPeriodMapType",
  "GraduationPlanTypeMapType",
  "GunFreeSchoolsActReportingStatusType",
  "IdentificationDocumentUseType",
  "IncidentLocationType",
  "InstitutionTelephoneNumberType",
  "IntegratedTechnologyStatusType",
  "InteractivityStyleType",
  "InternetAccessType",
  "InterventionClassType",
  "InterventionEffectivenessRatingType",
  "LanguageMapType",
  "LanguageUseType",
  "LeaveEventCategoryType",
  "LevelOfEducationMapType",
  "LimitedEnglishProficiencyMapType",
  "LocalEducationAgencyCategoryType",
  "MagnetSpecialProgramEmphasisSchoolType",
  "MediumOfInstructionType",
  "MeetingDayType",
  "MethodCreditEarnedType",
  "NetworkPurposeType",
  "OldEthnicityType",
  "OperationalStatusType",
  "OtherNameType",
  "PerformanceBaseConversionType",
  "PersonalInformationVerificationType",
  "PopulationServedType",
  "PostingResultType",
  "PostSecondaryEventCategoryType",
  "PostSecondaryInstitutionLevelType",
  "ProgramAssignmentMapType",
  "ProgramCharacteristicMapType",
  "ProgramSponsorType",
  "ProgramType",
  "PublicationStatusType",
  "RaceType",
  "ReasonExitedMapType",
  "ReasonNotTestedType",
  "RecognitionType",
  "RelationType",
  "RepeatIdentifierType",
  "ReporterDescriptionMapType",
  "ResidencyStatusMapType",
  "ResponseIndicatorType",
  "ResponsibilityMapType",
  "RestraintEventReasonType",
  "ResultDatatypeType",
  "RetestIndicatorType",
  "SchoolCategoryType",
  "SchoolChoiceImplementStatusType",
  "SchoolFoodServicesEligibilityMapType",
  "SchoolType",
  "SchoolYearType",
  "SectionCharacteristicMapType",
  "SeparationReasonMapType",
  "SeparationType",
  "SexType",
  "SpecialEducationSettingMapType",
  "StaffClassificationMapType",
  "StaffIdentificationSystemMapType",
  "StateAbbreviationType",
  "StudentCharacteristicMapType",
  "StudentIdentificationSystemMapType",
  "StudentParticipationCodeType",
  "TeachingCredentialBasisType",
  "TeachingCredentialMapType",
  "TelephoneNumberType",
  "TermMapType",
  "TitleIPartAParticipantType",
  "TitleIPartASchoolDesignationType",
  "VisaType",
  "WeaponMapType",
  "===== String Simple Types =====",
  "AccountCodeCategory",
  "AccountNumber",
  "AchievementCategorySystem",
  "AchievementTitle",
  "AddressLine",
  "AlternateDayName",
  "ApartmentRoomSuiteNumber",
  "AssessmentForm",
  "AssessmentResponse",
  "AssessmentTitle",
  "AttendanceEventReason",
  "Author",
  "BellScheduleName",
  "BirthInternationalProvince",
  "BuildingSiteNumber",
  "CaseNumber",
  "CIPCode",
  "City",
  "ClassPeriodName",
  "ClassroomIdentificationCode",
  "CodeValue",
  "CohortDescription",
  "CohortIdentifier",
  "ContactRestrictions",
  "ContentIdentifier",
  "ContentStandardName",
  "ContentStandardTitle",
  "ContentStandardVersion",
  "ContentVersion",
  "Coordinate",
  "CorrectResponse",
  "CountyFIPSCode",
  "CourseSetName",
  "CourseTitle",
  "Criteria",
  "Department",
  "Description",
  "DesignatedBy",
  "DiagnosticStatement",
  "DiplomaDescription",
  "DisabilityDiagnosis",
  "DisciplineActionIdentifier",
  "DisplacementStatus",
  "DocumentTitle",
  "ElectronicMailAddress",
  "FirstName",
  "GenerationCodeSuffix",
  "GradebookEntryTitle",
  "GradeEarned",
  "GradeValueQualifier",
  "HonorDescription",
  "IdentificationCode",
  "IncidentIdentifier",
  "Indicator",
  "IndicatorName",
  "IssuerName",
  "LastSurname",
  "LearningResourceMetadataURI",
  "LearningStandardId",
  "LeaveEventReason",
  "LocalCourseCode",
  "MiddleName",
  "NameOfCounty",
  "NameOfInstitution",
  "Nomenclature",
  "Objective",
  "PersonalTitlePrefix",
  "PositionTitle",
  "PostalCode",
  "PostSecondaryInstitutionId",
  "ProfileThumbnail",
  "ProgramId",
  "ProgramName",
  "Publisher",
  "Rating",
  "RatingOrganization",
  "RatingProgram",
  "RatingTitleType",
  "RecognitionDescription",
  "ReporterName",
  "RequisitionNumber",
  "RestraintEventIdentifier",
  "Result",
  "ServiceCategory",
  "ShortDescription",
  "Statement",
  "StreetNumberName",
  "TelephoneNumber",
  "TimeInterval",
  "UniqueId",
  "UniqueSectionCode",
  "URI",
  "WeekIdentifier",
  "===== Numeric Simple Types =====",
  "CreditConversion",
  "CreditsValue",
  "Currency",
  "Duration",
  "EventDuration",
  "GPA",
  "HoursOnLeave",
  "HoursPerWeek",
  "Learning",
  "NumberOfDaysAbsent",
  "NumberOfDaysInAttendance",
  "NumberOfDaysTardy",
  "NumberOfParts",
  "NumberOfYears",
  "NumericGrade",
  "Percent",
  "SequenceOfCourse",
  "TotalInstructionalDays",
  "Version",
]
`;

exports[`when generating xsd and comparing it to data standard 3.1 authoritative artifacts should have complex types in the correct order 1`] = `
Array [
  "===== Domain Entities =====",
  "AcademicWeek",
  "Account",
  "AccountabilityRating",
  "AccountCode",
  "Actual",
  "Assessment",
  "AssessmentItem",
  "BellSchedule",
  "Budget",
  "Calendar",
  "CalendarDate",
  "ClassPeriod",
  "Cohort",
  "CommunityOrganization",
  "CommunityProvider",
  "CommunityProviderLicense",
  "CompetencyObjective",
  "ContractedStaff",
  "Course",
  "CourseOffering",
  "CourseTranscript",
  "Credential",
  "DisciplineAction",
  "DisciplineIncident",
  "EducationContent",
  "EducationOrganization",
  "EducationOrganizationNetwork",
  "EducationServiceCenter",
  "Grade",
  "GradebookEntry",
  "GradingPeriod",
  "GraduationPlan",
  "Intervention",
  "InterventionPrescription",
  "InterventionStudy",
  "LearningObjective",
  "LearningStandard",
  "LocalEducationAgency",
  "Location",
  "ObjectiveAssessment",
  "OpenStaffPosition",
  "Parent",
  "Payroll",
  "PostSecondaryEvent",
  "PostSecondaryInstitution",
  "Program",
  "ReportCard",
  "RestraintEvent",
  "School",
  "Section",
  "SectionAttendanceTakenEvent",
  "Session",
  "Staff",
  "StaffAbsenceEvent",
  "StaffLeave",
  "StateEducationAgency",
  "Student",
  "StudentAcademicRecord",
  "StudentAssessment",
  "StudentCompetencyObjective",
  "StudentGradebookEntry",
  "StudentInterventionAttendanceEvent",
  "StudentLearningObjective",
  "StudentProgramAttendanceEvent",
  "StudentSchoolAttendanceEvent",
  "StudentSectionAttendanceEvent",
  "===== Descriptors =====",
  "AbsenceEventCategoryDescriptor",
  "AcademicHonorCategoryDescriptor",
  "AcademicSubjectDescriptor",
  "AccommodationDescriptor",
  "AccountClassificationDescriptor",
  "AchievementCategoryDescriptor",
  "AdditionalCreditTypeDescriptor",
  "AddressTypeDescriptor",
  "AdministrationEnvironmentDescriptor",
  "AdministrativeFundingControlDescriptor",
  "AssessmentCategoryDescriptor",
  "AssessmentIdentificationSystemDescriptor",
  "AssessmentItemCategoryDescriptor",
  "AssessmentItemResultDescriptor",
  "AssessmentPeriodDescriptor",
  "AssessmentReportingMethodDescriptor",
  "AttemptStatusDescriptor",
  "AttendanceEventCategoryDescriptor",
  "BehaviorDescriptor",
  "CalendarEventDescriptor",
  "CalendarTypeDescriptor",
  "CareerPathwayDescriptor",
  "CharterApprovalAgencyTypeDescriptor",
  "CharterStatusDescriptor",
  "CitizenshipStatusDescriptor",
  "ClassroomPositionDescriptor",
  "CohortScopeDescriptor",
  "CohortTypeDescriptor",
  "CohortYearTypeDescriptor",
  "CompetencyLevelDescriptor",
  "ContactTypeDescriptor",
  "ContentClassDescriptor",
  "ContinuationOfServicesReasonDescriptor",
  "CostRateDescriptor",
  "CountryDescriptor",
  "CourseAttemptResultDescriptor",
  "CourseDefinedByDescriptor",
  "CourseGPAApplicabilityDescriptor",
  "CourseIdentificationSystemDescriptor",
  "CourseLevelCharacteristicDescriptor",
  "CourseRepeatCodeDescriptor",
  "CredentialFieldDescriptor",
  "CredentialTypeDescriptor",
  "CreditTypeDescriptor",
  "CurriculumUsedDescriptor",
  "DeliveryMethodDescriptor",
  "DiagnosisDescriptor",
  "DiplomaLevelDescriptor",
  "DiplomaTypeDescriptor",
  "DisabilityDescriptor",
  "DisabilityDesignationDescriptor",
  "DisabilityDeterminationSourceTypeDescriptor",
  "DisciplineActionLengthDifferenceReasonDescriptor",
  "DisciplineDescriptor",
  "EducationalEnvironmentDescriptor",
  "EducationOrganizationCategoryDescriptor",
  "EducationOrganizationIdentificationSystemDescriptor",
  "EducationPlanDescriptor",
  "ElectronicMailTypeDescriptor",
  "EmploymentStatusDescriptor",
  "EntryGradeLevelReasonDescriptor",
  "EntryTypeDescriptor",
  "EventCircumstanceDescriptor",
  "ExitWithdrawTypeDescriptor",
  "GradebookEntryTypeDescriptor",
  "GradeLevelDescriptor",
  "GradeTypeDescriptor",
  "GradingPeriodDescriptor",
  "GraduationPlanTypeDescriptor",
  "GunFreeSchoolsActReportingStatusDescriptor",
  "HomelessPrimaryNighttimeResidenceDescriptor",
  "HomelessProgramServiceDescriptor",
  "IdentificationDocumentUseDescriptor",
  "IncidentLocationDescriptor",
  "InstitutionTelephoneNumberTypeDescriptor",
  "InteractivityStyleDescriptor",
  "InternetAccessDescriptor",
  "InterventionClassDescriptor",
  "InterventionEffectivenessRatingDescriptor",
  "LanguageDescriptor",
  "LanguageInstructionProgramServiceDescriptor",
  "LanguageUseDescriptor",
  "LearningStandardCategoryDescriptor",
  "LevelOfEducationDescriptor",
  "LicenseStatusDescriptor",
  "LicenseTypeDescriptor",
  "LimitedEnglishProficiencyDescriptor",
  "LocaleDescriptor",
  "LocalEducationAgencyCategoryDescriptor",
  "MagnetSpecialProgramEmphasisSchoolDescriptor",
  "MediumOfInstructionDescriptor",
  "MethodCreditEarnedDescriptor",
  "MigrantEducationProgramServiceDescriptor",
  "MonitoredDescriptor",
  "NeglectedOrDelinquentProgramDescriptor",
  "NeglectedOrDelinquentProgramServiceDescriptor",
  "NetworkPurposeDescriptor",
  "OldEthnicityDescriptor",
  "OperationalStatusDescriptor",
  "OtherNameTypeDescriptor",
  "ParticipationDescriptor",
  "PerformanceBaseConversionDescriptor",
  "PerformanceLevelDescriptor",
  "PersonalInformationVerificationDescriptor",
  "PopulationServedDescriptor",
  "PostingResultDescriptor",
  "PostSecondaryEventCategoryDescriptor",
  "PostSecondaryInstitutionLevelDescriptor",
  "ProficiencyDescriptor",
  "ProgramAssignmentDescriptor",
  "ProgramCharacteristicDescriptor",
  "ProgramSponsorDescriptor",
  "ProgramTypeDescriptor",
  "ProgressDescriptor",
  "ProgressLevelDescriptor",
  "ProviderCategoryDescriptor",
  "ProviderProfitabilityDescriptor",
  "ProviderStatusDescriptor",
  "PublicationStatusDescriptor",
  "RaceDescriptor",
  "ReasonExitedDescriptor",
  "ReasonNotTestedDescriptor",
  "RecognitionTypeDescriptor",
  "RelationDescriptor",
  "RepeatIdentifierDescriptor",
  "ReporterDescriptionDescriptor",
  "ResidencyStatusDescriptor",
  "ResponseIndicatorDescriptor",
  "ResponsibilityDescriptor",
  "RestraintEventReasonDescriptor",
  "ResultDatatypeTypeDescriptor",
  "RetestIndicatorDescriptor",
  "SchoolCategoryDescriptor",
  "SchoolChoiceImplementStatusDescriptor",
  "SchoolFoodServiceProgramServiceDescriptor",
  "SchoolTypeDescriptor",
  "SectionCharacteristicDescriptor",
  "SeparationDescriptor",
  "SeparationReasonDescriptor",
  "ServiceDescriptor",
  "SexDescriptor",
  "SpecialEducationProgramServiceDescriptor",
  "SpecialEducationSettingDescriptor",
  "StaffClassificationDescriptor",
  "StaffIdentificationSystemDescriptor",
  "StaffLeaveEventCategoryDescriptor",
  "StateAbbreviationDescriptor",
  "StudentCharacteristicDescriptor",
  "StudentIdentificationSystemDescriptor",
  "StudentParticipationCodeDescriptor",
  "TeachingCredentialBasisDescriptor",
  "TeachingCredentialDescriptor",
  "TechnicalSkillsAssessmentDescriptor",
  "TelephoneNumberTypeDescriptor",
  "TermDescriptor",
  "TitleIPartAParticipantDescriptor",
  "TitleIPartASchoolDesignationDescriptor",
  "TribalAffiliationDescriptor",
  "VisaDescriptor",
  "WeaponDescriptor",
  "===== Associations =====",
  "EducationOrganizationInterventionPrescriptionAssociation",
  "EducationOrganizationNetworkAssociation",
  "EducationOrganizationPeerAssociation",
  "FeederSchoolAssociation",
  "GeneralStudentProgramAssociation",
  "StaffCohortAssociation",
  "StaffEducationOrganizationAssignmentAssociation",
  "StaffEducationOrganizationContactAssociation",
  "StaffEducationOrganizationEmploymentAssociation",
  "StaffProgramAssociation",
  "StaffSchoolAssociation",
  "StaffSectionAssociation",
  "StudentCohortAssociation",
  "StudentCTEProgramAssociation",
  "StudentDisciplineIncidentAssociation",
  "StudentEducationOrganizationAssociation",
  "StudentEducationOrganizationResponsibilityAssociation",
  "StudentHomelessProgramAssociation",
  "StudentInterventionAssociation",
  "StudentLanguageInstructionProgramAssociation",
  "StudentMigrantEducationProgramAssociation",
  "StudentNeglectedOrDelinquentProgramAssociation",
  "StudentParentAssociation",
  "StudentProgramAssociation",
  "StudentSchoolAssociation",
  "StudentSchoolFoodServiceProgramAssociation",
  "StudentSectionAssociation",
  "StudentSpecialEducationProgramAssociation",
  "StudentTitleIPartAProgramAssociation",
  "===== Base Types (borrowed from NEIM standards) =====",
  "ComplexObjectType",
  "DescriptorType",
  "ReferenceType",
  "===== Extended Reference Types =====",
  "AcademicWeekIdentityType",
  "AcademicWeekReferenceType",
  "AccountabilityRatingIdentityType",
  "AccountabilityRatingReferenceType",
  "AccountCodeIdentityType",
  "AccountCodeReferenceType",
  "AccountIdentityType",
  "AccountReferenceType",
  "ActualIdentityType",
  "ActualReferenceType",
  "AssessmentIdentityType",
  "AssessmentItemIdentityType",
  "AssessmentItemReferenceType",
  "AssessmentLookupType",
  "AssessmentReferenceType",
  "BellScheduleIdentityType",
  "BellScheduleReferenceType",
  "BudgetIdentityType",
  "BudgetReferenceType",
  "CalendarDateIdentityType",
  "CalendarDateReferenceType",
  "CalendarIdentityType",
  "CalendarReferenceType",
  "ClassPeriodIdentityType",
  "ClassPeriodReferenceType",
  "CohortIdentityType",
  "CohortReferenceType",
  "CommunityOrganizationIdentityType",
  "CommunityOrganizationReferenceType",
  "CommunityProviderIdentityType",
  "CommunityProviderLicenseIdentityType",
  "CommunityProviderLicenseReferenceType",
  "CommunityProviderReferenceType",
  "CompetencyObjectiveIdentityType",
  "CompetencyObjectiveReferenceType",
  "ContractedStaffIdentityType",
  "ContractedStaffReferenceType",
  "CourseIdentityType",
  "CourseLookupType",
  "CourseOfferingIdentityType",
  "CourseOfferingReferenceType",
  "CourseReferenceType",
  "CourseTranscriptIdentityType",
  "CourseTranscriptReferenceType",
  "CredentialIdentityType",
  "CredentialReferenceType",
  "DisciplineActionIdentityType",
  "DisciplineActionReferenceType",
  "DisciplineIncidentIdentityType",
  "DisciplineIncidentReferenceType",
  "EducationContentIdentityType",
  "EducationContentReferenceType",
  "EducationOrganizationIdentityType",
  "EducationOrganizationInterventionPrescriptionAssociationIdentityType",
  "EducationOrganizationInterventionPrescriptionAssociationReferenceType",
  "EducationOrganizationLookupType",
  "EducationOrganizationNetworkAssociationIdentityType",
  "EducationOrganizationNetworkAssociationReferenceType",
  "EducationOrganizationNetworkIdentityType",
  "EducationOrganizationNetworkLookupType",
  "EducationOrganizationNetworkReferenceType",
  "EducationOrganizationPeerAssociationIdentityType",
  "EducationOrganizationPeerAssociationReferenceType",
  "EducationOrganizationReferenceType",
  "EducationServiceCenterIdentityType",
  "EducationServiceCenterLookupType",
  "EducationServiceCenterReferenceType",
  "FeederSchoolAssociationIdentityType",
  "FeederSchoolAssociationReferenceType",
  "GeneralStudentProgramAssociationIdentityType",
  "GeneralStudentProgramAssociationReferenceType",
  "GradebookEntryIdentityType",
  "GradebookEntryLookupType",
  "GradebookEntryReferenceType",
  "GradeIdentityType",
  "GradeReferenceType",
  "GradingPeriodIdentityType",
  "GradingPeriodReferenceType",
  "GraduationPlanIdentityType",
  "GraduationPlanReferenceType",
  "InterventionIdentityType",
  "InterventionPrescriptionIdentityType",
  "InterventionPrescriptionReferenceType",
  "InterventionReferenceType",
  "InterventionStudyIdentityType",
  "InterventionStudyReferenceType",
  "LearningObjectiveIdentityType",
  "LearningObjectiveReferenceType",
  "LearningStandardIdentityType",
  "LearningStandardLookupType",
  "LearningStandardReferenceType",
  "LocalEducationAgencyIdentityType",
  "LocalEducationAgencyLookupType",
  "LocalEducationAgencyReferenceType",
  "LocationIdentityType",
  "LocationReferenceType",
  "ObjectiveAssessmentIdentityType",
  "ObjectiveAssessmentReferenceType",
  "OpenStaffPositionIdentityType",
  "OpenStaffPositionReferenceType",
  "ParentIdentityType",
  "ParentLookupType",
  "ParentReferenceType",
  "PayrollIdentityType",
  "PayrollReferenceType",
  "PostSecondaryEventIdentityType",
  "PostSecondaryEventReferenceType",
  "PostSecondaryInstitutionIdentityType",
  "PostSecondaryInstitutionReferenceType",
  "ProgramIdentityType",
  "ProgramLookupType",
  "ProgramReferenceType",
  "ReportCardIdentityType",
  "ReportCardReferenceType",
  "RestraintEventIdentityType",
  "RestraintEventReferenceType",
  "SchoolIdentityType",
  "SchoolLookupType",
  "SchoolReferenceType",
  "SectionAttendanceTakenEventIdentityType",
  "SectionAttendanceTakenEventReferenceType",
  "SectionIdentityType",
  "SectionLookupType",
  "SectionReferenceType",
  "SessionIdentityType",
  "SessionLookupType",
  "SessionReferenceType",
  "StaffAbsenceEventIdentityType",
  "StaffAbsenceEventReferenceType",
  "StaffCohortAssociationIdentityType",
  "StaffCohortAssociationReferenceType",
  "StaffEducationOrganizationAssignmentAssociationIdentityType",
  "StaffEducationOrganizationAssignmentAssociationReferenceType",
  "StaffEducationOrganizationContactAssociationIdentityType",
  "StaffEducationOrganizationContactAssociationReferenceType",
  "StaffEducationOrganizationEmploymentAssociationIdentityType",
  "StaffEducationOrganizationEmploymentAssociationReferenceType",
  "StaffIdentityType",
  "StaffLeaveIdentityType",
  "StaffLeaveReferenceType",
  "StaffLookupType",
  "StaffProgramAssociationIdentityType",
  "StaffProgramAssociationReferenceType",
  "StaffReferenceType",
  "StaffSchoolAssociationIdentityType",
  "StaffSchoolAssociationReferenceType",
  "StaffSectionAssociationIdentityType",
  "StaffSectionAssociationReferenceType",
  "StateEducationAgencyIdentityType",
  "StateEducationAgencyLookupType",
  "StateEducationAgencyReferenceType",
  "StudentAcademicRecordIdentityType",
  "StudentAcademicRecordReferenceType",
  "StudentAssessmentIdentityType",
  "StudentAssessmentReferenceType",
  "StudentCohortAssociationIdentityType",
  "StudentCohortAssociationReferenceType",
  "StudentCompetencyObjectiveIdentityType",
  "StudentCompetencyObjectiveReferenceType",
  "StudentCTEProgramAssociationIdentityType",
  "StudentCTEProgramAssociationReferenceType",
  "StudentDisciplineIncidentAssociationIdentityType",
  "StudentDisciplineIncidentAssociationReferenceType",
  "StudentEducationOrganizationAssociationIdentityType",
  "StudentEducationOrganizationAssociationReferenceType",
  "StudentEducationOrganizationResponsibilityAssociationIdentityType",
  "StudentEducationOrganizationResponsibilityAssociationReferenceType",
  "StudentGradebookEntryIdentityType",
  "StudentGradebookEntryReferenceType",
  "StudentHomelessProgramAssociationIdentityType",
  "StudentHomelessProgramAssociationReferenceType",
  "StudentIdentityType",
  "StudentInterventionAssociationIdentityType",
  "StudentInterventionAssociationReferenceType",
  "StudentInterventionAttendanceEventIdentityType",
  "StudentInterventionAttendanceEventReferenceType",
  "StudentLanguageInstructionProgramAssociationIdentityType",
  "StudentLanguageInstructionProgramAssociationReferenceType",
  "StudentLearningObjectiveIdentityType",
  "StudentLearningObjectiveReferenceType",
  "StudentLookupType",
  "StudentMigrantEducationProgramAssociationIdentityType",
  "StudentMigrantEducationProgramAssociationReferenceType",
  "StudentNeglectedOrDelinquentProgramAssociationIdentityType",
  "StudentNeglectedOrDelinquentProgramAssociationReferenceType",
  "StudentParentAssociationIdentityType",
  "StudentParentAssociationReferenceType",
  "StudentProgramAssociationIdentityType",
  "StudentProgramAssociationReferenceType",
  "StudentProgramAttendanceEventIdentityType",
  "StudentProgramAttendanceEventReferenceType",
  "StudentReferenceType",
  "StudentSchoolAssociationIdentityType",
  "StudentSchoolAssociationReferenceType",
  "StudentSchoolAttendanceEventIdentityType",
  "StudentSchoolAttendanceEventReferenceType",
  "StudentSchoolFoodServiceProgramAssociationIdentityType",
  "StudentSchoolFoodServiceProgramAssociationReferenceType",
  "StudentSectionAssociationIdentityType",
  "StudentSectionAssociationReferenceType",
  "StudentSectionAttendanceEventIdentityType",
  "StudentSectionAttendanceEventReferenceType",
  "StudentSpecialEducationProgramAssociationIdentityType",
  "StudentSpecialEducationProgramAssociationReferenceType",
  "StudentTitleIPartAProgramAssociationIdentityType",
  "StudentTitleIPartAProgramAssociationReferenceType",
  "===== Extended Descriptor Reference Types =====",
  "===== Common Types =====",
  "AcademicHonor",
  "Achievement",
  "AdditionalCredits",
  "Address",
  "AssessmentIdentificationCode",
  "AssessmentPerformanceLevel",
  "AssessmentPeriod",
  "AssessmentScore",
  "AttendanceEvent",
  "Behavior",
  "BirthData",
  "Citizenship",
  "ClassRanking",
  "CohortYear",
  "ContentStandard",
  "CourseIdentificationCode",
  "Credits",
  "CreditsByCourse",
  "CreditsBySubject",
  "CTEProgram",
  "Diploma",
  "Disability",
  "EducationContentSource",
  "EducationOrganizationIdentificationCode",
  "ElectronicMail",
  "EmploymentPeriod",
  "EnglishLanguageProficiencyAssessment",
  "HomelessProgramService",
  "IdentificationDocument",
  "InstitutionTelephone",
  "InternationalAddress",
  "InterventionEffectiveness",
  "Language",
  "LanguageInstructionProgramService",
  "LearningResource",
  "LearningStandardIdentificationCode",
  "License",
  "LocalEducationAgencyAccountability",
  "LocalEducationAgencyFederalFunds",
  "MeetingTime",
  "MigrantEducationProgramService",
  "Name",
  "NeglectedOrDelinquentProgramService",
  "OtherName",
  "PerformanceLevel",
  "Period",
  "ProgramParticipation",
  "Recognition",
  "RequiredAssessment",
  "SchoolFoodServiceProgramService",
  "ScoreResult",
  "Service",
  "ServiceProvider",
  "SpecialEducationProgramService",
  "StaffIdentificationCode",
  "StateEducationAgencyAccountability",
  "StateEducationAgencyFederalFunds",
  "StudentAssessmentItem",
  "StudentCharacteristic",
  "StudentIdentificationCode",
  "StudentIndicator",
  "StudentObjectiveAssessment",
  "Telephone",
  "===== Enumerations and Enumerated Collections =====",
  "===== String Simple Types =====",
  "===== Numeric Simple Types =====",
]
`;

exports[`when generating xsd and comparing it to data standard 3.1 authoritative artifacts should have core with no differences 1`] = `""`;

exports[`when generating xsd and comparing it to data standard 3.1 authoritative artifacts should have schema annotation with no differences 1`] = `""`;

exports[`when generating xsd and comparing it to data standard 3.1 authoritative artifacts should have simple types in the correct order 1`] = `
Array [
  "===== Domain Entities =====",
  "===== Descriptors =====",
  "===== Associations =====",
  "===== Base Types (borrowed from NEIM standards) =====",
  "===== Extended Reference Types =====",
  "===== Extended Descriptor Reference Types =====",
  "AbsenceEventCategoryDescriptorReferenceType",
  "AcademicHonorCategoryDescriptorReferenceType",
  "AcademicSubjectDescriptorReferenceType",
  "AccommodationDescriptorReferenceType",
  "AccountClassificationDescriptorReferenceType",
  "AchievementCategoryDescriptorReferenceType",
  "AdditionalCreditTypeDescriptorReferenceType",
  "AddressTypeDescriptorReferenceType",
  "AdministrationEnvironmentDescriptorReferenceType",
  "AdministrativeFundingControlDescriptorReferenceType",
  "AssessmentCategoryDescriptorReferenceType",
  "AssessmentIdentificationSystemDescriptorReferenceType",
  "AssessmentItemCategoryDescriptorReferenceType",
  "AssessmentItemResultDescriptorReferenceType",
  "AssessmentPeriodDescriptorReferenceType",
  "AssessmentReportingMethodDescriptorReferenceType",
  "AttemptStatusDescriptorReferenceType",
  "AttendanceEventCategoryDescriptorReferenceType",
  "BehaviorDescriptorReferenceType",
  "CalendarEventDescriptorReferenceType",
  "CalendarTypeDescriptorReferenceType",
  "CareerPathwayDescriptorReferenceType",
  "CharterApprovalAgencyTypeDescriptorReferenceType",
  "CharterStatusDescriptorReferenceType",
  "CitizenshipStatusDescriptorReferenceType",
  "ClassroomPositionDescriptorReferenceType",
  "CohortScopeDescriptorReferenceType",
  "CohortTypeDescriptorReferenceType",
  "CohortYearTypeDescriptorReferenceType",
  "CompetencyLevelDescriptorReferenceType",
  "ContactTypeDescriptorReferenceType",
  "ContentClassDescriptorReferenceType",
  "ContinuationOfServicesReasonDescriptorReferenceType",
  "CostRateDescriptorReferenceType",
  "CountryDescriptorReferenceType",
  "CourseAttemptResultDescriptorReferenceType",
  "CourseDefinedByDescriptorReferenceType",
  "CourseGPAApplicabilityDescriptorReferenceType",
  "CourseIdentificationSystemDescriptorReferenceType",
  "CourseLevelCharacteristicDescriptorReferenceType",
  "CourseRepeatCodeDescriptorReferenceType",
  "CredentialFieldDescriptorReferenceType",
  "CredentialTypeDescriptorReferenceType",
  "CreditTypeDescriptorReferenceType",
  "CurriculumUsedDescriptorReferenceType",
  "DeliveryMethodDescriptorReferenceType",
  "DiagnosisDescriptorReferenceType",
  "DiplomaLevelDescriptorReferenceType",
  "DiplomaTypeDescriptorReferenceType",
  "DisabilityDescriptorReferenceType",
  "DisabilityDesignationDescriptorReferenceType",
  "DisabilityDeterminationSourceTypeDescriptorReferenceType",
  "DisciplineActionLengthDifferenceReasonDescriptorReferenceType",
  "DisciplineDescriptorReferenceType",
  "EducationalEnvironmentDescriptorReferenceType",
  "EducationOrganizationCategoryDescriptorReferenceType",
  "EducationOrganizationIdentificationSystemDescriptorReferenceType",
  "EducationPlanDescriptorReferenceType",
  "ElectronicMailTypeDescriptorReferenceType",
  "EmploymentStatusDescriptorReferenceType",
  "EntryGradeLevelReasonDescriptorReferenceType",
  "EntryTypeDescriptorReferenceType",
  "EventCircumstanceDescriptorReferenceType",
  "ExitWithdrawTypeDescriptorReferenceType",
  "GradebookEntryTypeDescriptorReferenceType",
  "GradeLevelDescriptorReferenceType",
  "GradeTypeDescriptorReferenceType",
  "GradingPeriodDescriptorReferenceType",
  "GraduationPlanTypeDescriptorReferenceType",
  "GunFreeSchoolsActReportingStatusDescriptorReferenceType",
  "HomelessPrimaryNighttimeResidenceDescriptorReferenceType",
  "HomelessProgramServiceDescriptorReferenceType",
  "IdentificationDocumentUseDescriptorReferenceType",
  "IncidentLocationDescriptorReferenceType",
  "InstitutionTelephoneNumberTypeDescriptorReferenceType",
  "InteractivityStyleDescriptorReferenceType",
  "InternetAccessDescriptorReferenceType",
  "InterventionClassDescriptorReferenceType",
  "InterventionEffectivenessRatingDescriptorReferenceType",
  "LanguageDescriptorReferenceType",
  "LanguageInstructionProgramServiceDescriptorReferenceType",
  "LanguageUseDescriptorReferenceType",
  "LearningStandardCategoryDescriptorReferenceType",
  "LevelOfEducationDescriptorReferenceType",
  "LicenseStatusDescriptorReferenceType",
  "LicenseTypeDescriptorReferenceType",
  "LimitedEnglishProficiencyDescriptorReferenceType",
  "LocaleDescriptorReferenceType",
  "LocalEducationAgencyCategoryDescriptorReferenceType",
  "MagnetSpecialProgramEmphasisSchoolDescriptorReferenceType",
  "MediumOfInstructionDescriptorReferenceType",
  "MethodCreditEarnedDescriptorReferenceType",
  "MigrantEducationProgramServiceDescriptorReferenceType",
  "MonitoredDescriptorReferenceType",
  "NeglectedOrDelinquentProgramDescriptorReferenceType",
  "NeglectedOrDelinquentProgramServiceDescriptorReferenceType",
  "NetworkPurposeDescriptorReferenceType",
  "OldEthnicityDescriptorReferenceType",
  "OperationalStatusDescriptorReferenceType",
  "OtherNameTypeDescriptorReferenceType",
  "ParticipationDescriptorReferenceType",
  "PerformanceBaseConversionDescriptorReferenceType",
  "PerformanceLevelDescriptorReferenceType",
  "PersonalInformationVerificationDescriptorReferenceType",
  "PopulationServedDescriptorReferenceType",
  "PostingResultDescriptorReferenceType",
  "PostSecondaryEventCategoryDescriptorReferenceType",
  "PostSecondaryInstitutionLevelDescriptorReferenceType",
  "ProficiencyDescriptorReferenceType",
  "ProgramAssignmentDescriptorReferenceType",
  "ProgramCharacteristicDescriptorReferenceType",
  "ProgramSponsorDescriptorReferenceType",
  "ProgramTypeDescriptorReferenceType",
  "ProgressDescriptorReferenceType",
  "ProgressLevelDescriptorReferenceType",
  "ProviderCategoryDescriptorReferenceType",
  "ProviderProfitabilityDescriptorReferenceType",
  "ProviderStatusDescriptorReferenceType",
  "PublicationStatusDescriptorReferenceType",
  "RaceDescriptorReferenceType",
  "ReasonExitedDescriptorReferenceType",
  "ReasonNotTestedDescriptorReferenceType",
  "RecognitionTypeDescriptorReferenceType",
  "RelationDescriptorReferenceType",
  "RepeatIdentifierDescriptorReferenceType",
  "ReporterDescriptionDescriptorReferenceType",
  "ResidencyStatusDescriptorReferenceType",
  "ResponseIndicatorDescriptorReferenceType",
  "ResponsibilityDescriptorReferenceType",
  "RestraintEventReasonDescriptorReferenceType",
  "ResultDatatypeTypeDescriptorReferenceType",
  "RetestIndicatorDescriptorReferenceType",
  "SchoolCategoryDescriptorReferenceType",
  "SchoolChoiceImplementStatusDescriptorReferenceType",
  "SchoolFoodServiceProgramServiceDescriptorReferenceType",
  "SchoolTypeDescriptorReferenceType",
  "SectionCharacteristicDescriptorReferenceType",
  "SeparationDescriptorReferenceType",
  "SeparationReasonDescriptorReferenceType",
  "ServiceDescriptorReferenceType",
  "SexDescriptorReferenceType",
  "SpecialEducationProgramServiceDescriptorReferenceType",
  "SpecialEducationSettingDescriptorReferenceType",
  "StaffClassificationDescriptorReferenceType",
  "StaffIdentificationSystemDescriptorReferenceType",
  "StaffLeaveEventCategoryDescriptorReferenceType",
  "StateAbbreviationDescriptorReferenceType",
  "StudentCharacteristicDescriptorReferenceType",
  "StudentIdentificationSystemDescriptorReferenceType",
  "StudentParticipationCodeDescriptorReferenceType",
  "TeachingCredentialBasisDescriptorReferenceType",
  "TeachingCredentialDescriptorReferenceType",
  "TechnicalSkillsAssessmentDescriptorReferenceType",
  "TelephoneNumberTypeDescriptorReferenceType",
  "TermDescriptorReferenceType",
  "TitleIPartAParticipantDescriptorReferenceType",
  "TitleIPartASchoolDesignationDescriptorReferenceType",
  "TribalAffiliationDescriptorReferenceType",
  "VisaDescriptorReferenceType",
  "WeaponDescriptorReferenceType",
  "===== Common Types =====",
  "===== Enumerations and Enumerated Collections =====",
  "SchoolYearType",
  "===== String Simple Types =====",
  "AccountCodeCategory",
  "AccountCodeDescription",
  "AccountCodeNumber",
  "AccountIdentifier",
  "AccountName",
  "AchievementCategorySystem",
  "AchievementTitle",
  "AddressLine",
  "AlternateDayName",
  "ApartmentRoomSuiteNumber",
  "AssessmentFamily",
  "AssessmentForm",
  "AssessmentResponse",
  "AssessmentTitle",
  "AttendanceEventReason",
  "Author",
  "BellScheduleName",
  "BirthInternationalProvince",
  "BuildingSiteNumber",
  "CaseNumber",
  "CIPCode",
  "City",
  "ClassPeriodName",
  "ClassroomIdentificationCode",
  "CodeValue",
  "CohortDescription",
  "CohortIdentifier",
  "CongressionalDistrict",
  "ContactRestrictions",
  "ContactTitle",
  "ContentIdentifier",
  "ContentStandardName",
  "ContentStandardTitle",
  "ContentStandardVersion",
  "ContentVersion",
  "Coordinate",
  "CorrectResponse",
  "CountyFIPSCode",
  "CourseSetName",
  "CourseTitle",
  "CredentialCode",
  "CredentialEndorsement",
  "Criteria",
  "Department",
  "Description",
  "DescriptorReferenceType",
  "DesignatedBy",
  "DiagnosticStatement",
  "DiplomaDescription",
  "DisabilityDiagnosis",
  "DisciplineActionIdentifier",
  "DocumentTitle",
  "ElectronicMailAddress",
  "ExternalTerm",
  "FirstName",
  "GenerationCodeSuffix",
  "GradebookEntryTitle",
  "GradeEarned",
  "GradeValueQualifier",
  "HonorDescription",
  "IdentificationCode",
  "IncidentIdentifier",
  "Indicator",
  "IndicatorName",
  "IssuerName",
  "LastSurname",
  "LearningResourceMetadataURI",
  "LearningStandardId",
  "LicenseIdentifier",
  "LicensingOrganization",
  "LocalCourseCode",
  "MiddleName",
  "NameOfCounty",
  "NameOfInstitution",
  "Nomenclature",
  "Objective",
  "PersonalTitlePrefix",
  "PositionTitle",
  "PostalCode",
  "ProfileThumbnail",
  "ProgramId",
  "ProgramName",
  "Publisher",
  "Rating",
  "RatingOrganization",
  "RatingProgram",
  "RatingTitleType",
  "Reason",
  "RecognitionDescription",
  "ReporterName",
  "RequisitionNumber",
  "RestraintEventIdentifier",
  "Result",
  "SectionIdentifier",
  "ServiceCategory",
  "ShortDescription",
  "Statement",
  "StreetNumberName",
  "TelephoneNumber",
  "TimeInterval",
  "UniqueId",
  "URI",
  "WeekIdentifier",
  "===== Numeric Simple Types =====",
  "AgeAuthorizedToServe",
  "AssessmentVersion",
  "Capacity",
  "CreditConversion",
  "CreditsValue",
  "Currency",
  "DisciplineActionLength",
  "Dosage",
  "Duration",
  "EventDuration",
  "GPA",
  "HoursAbsent",
  "HoursPerWeek",
  "Learning",
  "MaxCompletionsForCredit",
  "NumberOfDaysAbsent",
  "NumberOfDaysInAttendance",
  "NumberOfDaysTardy",
  "NumberOfParts",
  "NumberOfYears",
  "NumericGrade",
  "OrderOfPriority",
  "Percent",
  "SequenceOfCourse",
  "TotalInstructionalDays",
]
`;

exports[`when generating xsd with extension and comparing it to data standard 3.1 authoritative artifacts should have complex types in the correct order 1`] = `
Array [
  "===== Domain Entities =====",
  "AcademicWeek",
  "Account",
  "AccountabilityRating",
  "AccountCode",
  "Actual",
  "Assessment",
  "AssessmentItem",
  "BellSchedule",
  "Budget",
  "Calendar",
  "CalendarDate",
  "ClassPeriod",
  "Cohort",
  "CommunityOrganization",
  "CommunityProvider",
  "CommunityProviderLicense",
  "CompetencyObjective",
  "ContractedStaff",
  "Course",
  "CourseOffering",
  "CourseTranscript",
  "Credential",
  "DisciplineAction",
  "DisciplineIncident",
  "EducationContent",
  "EducationOrganization",
  "EducationOrganizationNetwork",
  "EducationServiceCenter",
  "Grade",
  "GradebookEntry",
  "GradingPeriod",
  "GraduationPlan",
  "Intervention",
  "InterventionPrescription",
  "InterventionStudy",
  "LearningObjective",
  "LearningStandard",
  "LocalEducationAgency",
  "Location",
  "ObjectiveAssessment",
  "OpenStaffPosition",
  "Parent",
  "Payroll",
  "PostSecondaryEvent",
  "PostSecondaryInstitution",
  "Program",
  "ReportCard",
  "RestraintEvent",
  "School",
  "Section",
  "SectionAttendanceTakenEvent",
  "Session",
  "Staff",
  "StaffAbsenceEvent",
  "StaffLeave",
  "StateEducationAgency",
  "Student",
  "StudentAcademicRecord",
  "StudentAssessment",
  "StudentCompetencyObjective",
  "StudentGradebookEntry",
  "StudentInterventionAttendanceEvent",
  "StudentLearningObjective",
  "StudentProgramAttendanceEvent",
  "StudentSchoolAttendanceEvent",
  "StudentSectionAttendanceEvent",
  "===== Descriptors =====",
  "AbsenceEventCategoryDescriptor",
  "AcademicHonorCategoryDescriptor",
  "AcademicSubjectDescriptor",
  "AccommodationDescriptor",
  "AccountClassificationDescriptor",
  "AchievementCategoryDescriptor",
  "AdditionalCreditTypeDescriptor",
  "AddressTypeDescriptor",
  "AdministrationEnvironmentDescriptor",
  "AdministrativeFundingControlDescriptor",
  "AssessmentCategoryDescriptor",
  "AssessmentIdentificationSystemDescriptor",
  "AssessmentItemCategoryDescriptor",
  "AssessmentItemResultDescriptor",
  "AssessmentPeriodDescriptor",
  "AssessmentReportingMethodDescriptor",
  "AttemptStatusDescriptor",
  "AttendanceEventCategoryDescriptor",
  "BehaviorDescriptor",
  "CalendarEventDescriptor",
  "CalendarTypeDescriptor",
  "CareerPathwayDescriptor",
  "CharterApprovalAgencyTypeDescriptor",
  "CharterStatusDescriptor",
  "CitizenshipStatusDescriptor",
  "ClassroomPositionDescriptor",
  "CohortScopeDescriptor",
  "CohortTypeDescriptor",
  "CohortYearTypeDescriptor",
  "CompetencyLevelDescriptor",
  "ContactTypeDescriptor",
  "ContentClassDescriptor",
  "ContinuationOfServicesReasonDescriptor",
  "CostRateDescriptor",
  "CountryDescriptor",
  "CourseAttemptResultDescriptor",
  "CourseDefinedByDescriptor",
  "CourseGPAApplicabilityDescriptor",
  "CourseIdentificationSystemDescriptor",
  "CourseLevelCharacteristicDescriptor",
  "CourseRepeatCodeDescriptor",
  "CredentialFieldDescriptor",
  "CredentialTypeDescriptor",
  "CreditTypeDescriptor",
  "CurriculumUsedDescriptor",
  "DeliveryMethodDescriptor",
  "DiagnosisDescriptor",
  "DiplomaLevelDescriptor",
  "DiplomaTypeDescriptor",
  "DisabilityDescriptor",
  "DisabilityDesignationDescriptor",
  "DisabilityDeterminationSourceTypeDescriptor",
  "DisciplineActionLengthDifferenceReasonDescriptor",
  "DisciplineDescriptor",
  "EducationalEnvironmentDescriptor",
  "EducationOrganizationCategoryDescriptor",
  "EducationOrganizationIdentificationSystemDescriptor",
  "EducationPlanDescriptor",
  "ElectronicMailTypeDescriptor",
  "EmploymentStatusDescriptor",
  "EntryGradeLevelReasonDescriptor",
  "EntryTypeDescriptor",
  "EventCircumstanceDescriptor",
  "ExitWithdrawTypeDescriptor",
  "GradebookEntryTypeDescriptor",
  "GradeLevelDescriptor",
  "GradeTypeDescriptor",
  "GradingPeriodDescriptor",
  "GraduationPlanTypeDescriptor",
  "GunFreeSchoolsActReportingStatusDescriptor",
  "HomelessPrimaryNighttimeResidenceDescriptor",
  "HomelessProgramServiceDescriptor",
  "IdentificationDocumentUseDescriptor",
  "IncidentLocationDescriptor",
  "InstitutionTelephoneNumberTypeDescriptor",
  "InteractivityStyleDescriptor",
  "InternetAccessDescriptor",
  "InterventionClassDescriptor",
  "InterventionEffectivenessRatingDescriptor",
  "LanguageDescriptor",
  "LanguageInstructionProgramServiceDescriptor",
  "LanguageUseDescriptor",
  "LearningStandardCategoryDescriptor",
  "LevelOfEducationDescriptor",
  "LicenseStatusDescriptor",
  "LicenseTypeDescriptor",
  "LimitedEnglishProficiencyDescriptor",
  "LocaleDescriptor",
  "LocalEducationAgencyCategoryDescriptor",
  "MagnetSpecialProgramEmphasisSchoolDescriptor",
  "MediumOfInstructionDescriptor",
  "MethodCreditEarnedDescriptor",
  "MigrantEducationProgramServiceDescriptor",
  "MonitoredDescriptor",
  "NeglectedOrDelinquentProgramDescriptor",
  "NeglectedOrDelinquentProgramServiceDescriptor",
  "NetworkPurposeDescriptor",
  "OldEthnicityDescriptor",
  "OperationalStatusDescriptor",
  "OtherNameTypeDescriptor",
  "ParticipationDescriptor",
  "PerformanceBaseConversionDescriptor",
  "PerformanceLevelDescriptor",
  "PersonalInformationVerificationDescriptor",
  "PopulationServedDescriptor",
  "PostingResultDescriptor",
  "PostSecondaryEventCategoryDescriptor",
  "PostSecondaryInstitutionLevelDescriptor",
  "ProficiencyDescriptor",
  "ProgramAssignmentDescriptor",
  "ProgramCharacteristicDescriptor",
  "ProgramSponsorDescriptor",
  "ProgramTypeDescriptor",
  "ProgressDescriptor",
  "ProgressLevelDescriptor",
  "ProviderCategoryDescriptor",
  "ProviderProfitabilityDescriptor",
  "ProviderStatusDescriptor",
  "PublicationStatusDescriptor",
  "RaceDescriptor",
  "ReasonExitedDescriptor",
  "ReasonNotTestedDescriptor",
  "RecognitionTypeDescriptor",
  "RelationDescriptor",
  "RepeatIdentifierDescriptor",
  "ReporterDescriptionDescriptor",
  "ResidencyStatusDescriptor",
  "ResponseIndicatorDescriptor",
  "ResponsibilityDescriptor",
  "RestraintEventReasonDescriptor",
  "ResultDatatypeTypeDescriptor",
  "RetestIndicatorDescriptor",
  "SchoolCategoryDescriptor",
  "SchoolChoiceImplementStatusDescriptor",
  "SchoolFoodServiceProgramServiceDescriptor",
  "SchoolTypeDescriptor",
  "SectionCharacteristicDescriptor",
  "SeparationDescriptor",
  "SeparationReasonDescriptor",
  "ServiceDescriptor",
  "SexDescriptor",
  "SpecialEducationProgramServiceDescriptor",
  "SpecialEducationSettingDescriptor",
  "StaffClassificationDescriptor",
  "StaffIdentificationSystemDescriptor",
  "StaffLeaveEventCategoryDescriptor",
  "StateAbbreviationDescriptor",
  "StudentCharacteristicDescriptor",
  "StudentIdentificationSystemDescriptor",
  "StudentParticipationCodeDescriptor",
  "TeachingCredentialBasisDescriptor",
  "TeachingCredentialDescriptor",
  "TechnicalSkillsAssessmentDescriptor",
  "TelephoneNumberTypeDescriptor",
  "TermDescriptor",
  "TitleIPartAParticipantDescriptor",
  "TitleIPartASchoolDesignationDescriptor",
  "TribalAffiliationDescriptor",
  "VisaDescriptor",
  "WeaponDescriptor",
  "===== Associations =====",
  "EducationOrganizationInterventionPrescriptionAssociation",
  "EducationOrganizationNetworkAssociation",
  "EducationOrganizationPeerAssociation",
  "FeederSchoolAssociation",
  "GeneralStudentProgramAssociation",
  "StaffCohortAssociation",
  "StaffEducationOrganizationAssignmentAssociation",
  "StaffEducationOrganizationContactAssociation",
  "StaffEducationOrganizationEmploymentAssociation",
  "StaffProgramAssociation",
  "StaffSchoolAssociation",
  "StaffSectionAssociation",
  "StudentCohortAssociation",
  "StudentCTEProgramAssociation",
  "StudentDisciplineIncidentAssociation",
  "StudentEducationOrganizationAssociation",
  "StudentEducationOrganizationResponsibilityAssociation",
  "StudentHomelessProgramAssociation",
  "StudentInterventionAssociation",
  "StudentLanguageInstructionProgramAssociation",
  "StudentMigrantEducationProgramAssociation",
  "StudentNeglectedOrDelinquentProgramAssociation",
  "StudentParentAssociation",
  "StudentProgramAssociation",
  "StudentSchoolAssociation",
  "StudentSchoolFoodServiceProgramAssociation",
  "StudentSectionAssociation",
  "StudentSpecialEducationProgramAssociation",
  "StudentTitleIPartAProgramAssociation",
  "===== Base Types (borrowed from NEIM standards) =====",
  "ComplexObjectType",
  "DescriptorType",
  "ReferenceType",
  "===== Extended Reference Types =====",
  "AcademicWeekIdentityType",
  "AcademicWeekReferenceType",
  "AccountabilityRatingIdentityType",
  "AccountabilityRatingReferenceType",
  "AccountCodeIdentityType",
  "AccountCodeReferenceType",
  "AccountIdentityType",
  "AccountReferenceType",
  "ActualIdentityType",
  "ActualReferenceType",
  "AssessmentIdentityType",
  "AssessmentItemIdentityType",
  "AssessmentItemReferenceType",
  "AssessmentLookupType",
  "AssessmentReferenceType",
  "BellScheduleIdentityType",
  "BellScheduleReferenceType",
  "BudgetIdentityType",
  "BudgetReferenceType",
  "CalendarDateIdentityType",
  "CalendarDateReferenceType",
  "CalendarIdentityType",
  "CalendarReferenceType",
  "ClassPeriodIdentityType",
  "ClassPeriodReferenceType",
  "CohortIdentityType",
  "CohortReferenceType",
  "CommunityOrganizationIdentityType",
  "CommunityOrganizationReferenceType",
  "CommunityProviderIdentityType",
  "CommunityProviderLicenseIdentityType",
  "CommunityProviderLicenseReferenceType",
  "CommunityProviderReferenceType",
  "CompetencyObjectiveIdentityType",
  "CompetencyObjectiveReferenceType",
  "ContractedStaffIdentityType",
  "ContractedStaffReferenceType",
  "CourseIdentityType",
  "CourseLookupType",
  "CourseOfferingIdentityType",
  "CourseOfferingReferenceType",
  "CourseReferenceType",
  "CourseTranscriptIdentityType",
  "CourseTranscriptReferenceType",
  "CredentialIdentityType",
  "CredentialReferenceType",
  "DisciplineActionIdentityType",
  "DisciplineActionReferenceType",
  "DisciplineIncidentIdentityType",
  "DisciplineIncidentReferenceType",
  "EducationContentIdentityType",
  "EducationContentReferenceType",
  "EducationOrganizationIdentityType",
  "EducationOrganizationInterventionPrescriptionAssociationIdentityType",
  "EducationOrganizationInterventionPrescriptionAssociationReferenceType",
  "EducationOrganizationLookupType",
  "EducationOrganizationNetworkAssociationIdentityType",
  "EducationOrganizationNetworkAssociationReferenceType",
  "EducationOrganizationNetworkIdentityType",
  "EducationOrganizationNetworkLookupType",
  "EducationOrganizationNetworkReferenceType",
  "EducationOrganizationPeerAssociationIdentityType",
  "EducationOrganizationPeerAssociationReferenceType",
  "EducationOrganizationReferenceType",
  "EducationServiceCenterIdentityType",
  "EducationServiceCenterLookupType",
  "EducationServiceCenterReferenceType",
  "FeederSchoolAssociationIdentityType",
  "FeederSchoolAssociationReferenceType",
  "GeneralStudentProgramAssociationIdentityType",
  "GeneralStudentProgramAssociationReferenceType",
  "GradebookEntryIdentityType",
  "GradebookEntryLookupType",
  "GradebookEntryReferenceType",
  "GradeIdentityType",
  "GradeReferenceType",
  "GradingPeriodIdentityType",
  "GradingPeriodReferenceType",
  "GraduationPlanIdentityType",
  "GraduationPlanReferenceType",
  "InterventionIdentityType",
  "InterventionPrescriptionIdentityType",
  "InterventionPrescriptionReferenceType",
  "InterventionReferenceType",
  "InterventionStudyIdentityType",
  "InterventionStudyReferenceType",
  "LearningObjectiveIdentityType",
  "LearningObjectiveReferenceType",
  "LearningStandardIdentityType",
  "LearningStandardLookupType",
  "LearningStandardReferenceType",
  "LocalEducationAgencyIdentityType",
  "LocalEducationAgencyLookupType",
  "LocalEducationAgencyReferenceType",
  "LocationIdentityType",
  "LocationReferenceType",
  "ObjectiveAssessmentIdentityType",
  "ObjectiveAssessmentReferenceType",
  "OpenStaffPositionIdentityType",
  "OpenStaffPositionReferenceType",
  "ParentIdentityType",
  "ParentLookupType",
  "ParentReferenceType",
  "PayrollIdentityType",
  "PayrollReferenceType",
  "PostSecondaryEventIdentityType",
  "PostSecondaryEventReferenceType",
  "PostSecondaryInstitutionIdentityType",
  "PostSecondaryInstitutionReferenceType",
  "ProgramIdentityType",
  "ProgramLookupType",
  "ProgramReferenceType",
  "ReportCardIdentityType",
  "ReportCardReferenceType",
  "RestraintEventIdentityType",
  "RestraintEventReferenceType",
  "SchoolIdentityType",
  "SchoolLookupType",
  "SchoolReferenceType",
  "SectionAttendanceTakenEventIdentityType",
  "SectionAttendanceTakenEventReferenceType",
  "SectionIdentityType",
  "SectionLookupType",
  "SectionReferenceType",
  "SessionIdentityType",
  "SessionLookupType",
  "SessionReferenceType",
  "StaffAbsenceEventIdentityType",
  "StaffAbsenceEventReferenceType",
  "StaffCohortAssociationIdentityType",
  "StaffCohortAssociationReferenceType",
  "StaffEducationOrganizationAssignmentAssociationIdentityType",
  "StaffEducationOrganizationAssignmentAssociationReferenceType",
  "StaffEducationOrganizationContactAssociationIdentityType",
  "StaffEducationOrganizationContactAssociationReferenceType",
  "StaffEducationOrganizationEmploymentAssociationIdentityType",
  "StaffEducationOrganizationEmploymentAssociationReferenceType",
  "StaffIdentityType",
  "StaffLeaveIdentityType",
  "StaffLeaveReferenceType",
  "StaffLookupType",
  "StaffProgramAssociationIdentityType",
  "StaffProgramAssociationReferenceType",
  "StaffReferenceType",
  "StaffSchoolAssociationIdentityType",
  "StaffSchoolAssociationReferenceType",
  "StaffSectionAssociationIdentityType",
  "StaffSectionAssociationReferenceType",
  "StateEducationAgencyIdentityType",
  "StateEducationAgencyLookupType",
  "StateEducationAgencyReferenceType",
  "StudentAcademicRecordIdentityType",
  "StudentAcademicRecordReferenceType",
  "StudentAssessmentIdentityType",
  "StudentAssessmentReferenceType",
  "StudentCohortAssociationIdentityType",
  "StudentCohortAssociationReferenceType",
  "StudentCompetencyObjectiveIdentityType",
  "StudentCompetencyObjectiveReferenceType",
  "StudentCTEProgramAssociationIdentityType",
  "StudentCTEProgramAssociationReferenceType",
  "StudentDisciplineIncidentAssociationIdentityType",
  "StudentDisciplineIncidentAssociationReferenceType",
  "StudentEducationOrganizationAssociationIdentityType",
  "StudentEducationOrganizationAssociationReferenceType",
  "StudentEducationOrganizationResponsibilityAssociationIdentityType",
  "StudentEducationOrganizationResponsibilityAssociationReferenceType",
  "StudentGradebookEntryIdentityType",
  "StudentGradebookEntryReferenceType",
  "StudentHomelessProgramAssociationIdentityType",
  "StudentHomelessProgramAssociationReferenceType",
  "StudentIdentityType",
  "StudentInterventionAssociationIdentityType",
  "StudentInterventionAssociationReferenceType",
  "StudentInterventionAttendanceEventIdentityType",
  "StudentInterventionAttendanceEventReferenceType",
  "StudentLanguageInstructionProgramAssociationIdentityType",
  "StudentLanguageInstructionProgramAssociationReferenceType",
  "StudentLearningObjectiveIdentityType",
  "StudentLearningObjectiveReferenceType",
  "StudentLookupType",
  "StudentMigrantEducationProgramAssociationIdentityType",
  "StudentMigrantEducationProgramAssociationReferenceType",
  "StudentNeglectedOrDelinquentProgramAssociationIdentityType",
  "StudentNeglectedOrDelinquentProgramAssociationReferenceType",
  "StudentParentAssociationIdentityType",
  "StudentParentAssociationReferenceType",
  "StudentProgramAssociationIdentityType",
  "StudentProgramAssociationReferenceType",
  "StudentProgramAttendanceEventIdentityType",
  "StudentProgramAttendanceEventReferenceType",
  "StudentReferenceType",
  "StudentSchoolAssociationIdentityType",
  "StudentSchoolAssociationReferenceType",
  "StudentSchoolAttendanceEventIdentityType",
  "StudentSchoolAttendanceEventReferenceType",
  "StudentSchoolFoodServiceProgramAssociationIdentityType",
  "StudentSchoolFoodServiceProgramAssociationReferenceType",
  "StudentSectionAssociationIdentityType",
  "StudentSectionAssociationReferenceType",
  "StudentSectionAttendanceEventIdentityType",
  "StudentSectionAttendanceEventReferenceType",
  "StudentSpecialEducationProgramAssociationIdentityType",
  "StudentSpecialEducationProgramAssociationReferenceType",
  "StudentTitleIPartAProgramAssociationIdentityType",
  "StudentTitleIPartAProgramAssociationReferenceType",
  "===== Extended Descriptor Reference Types =====",
  "===== Common Types =====",
  "AcademicHonor",
  "Achievement",
  "AdditionalCredits",
  "Address",
  "AssessmentIdentificationCode",
  "AssessmentPerformanceLevel",
  "AssessmentPeriod",
  "AssessmentScore",
  "AttendanceEvent",
  "Behavior",
  "BirthData",
  "Citizenship",
  "ClassRanking",
  "CohortYear",
  "ContentStandard",
  "CourseIdentificationCode",
  "Credits",
  "CreditsByCourse",
  "CreditsBySubject",
  "CTEProgram",
  "Diploma",
  "Disability",
  "EducationContentSource",
  "EducationOrganizationIdentificationCode",
  "ElectronicMail",
  "EmploymentPeriod",
  "EnglishLanguageProficiencyAssessment",
  "HomelessProgramService",
  "IdentificationDocument",
  "InstitutionTelephone",
  "InternationalAddress",
  "InterventionEffectiveness",
  "Language",
  "LanguageInstructionProgramService",
  "LearningResource",
  "LearningStandardIdentificationCode",
  "License",
  "LocalEducationAgencyAccountability",
  "LocalEducationAgencyFederalFunds",
  "MeetingTime",
  "MigrantEducationProgramService",
  "Name",
  "NeglectedOrDelinquentProgramService",
  "OtherName",
  "PerformanceLevel",
  "Period",
  "ProgramParticipation",
  "Recognition",
  "RequiredAssessment",
  "SchoolFoodServiceProgramService",
  "ScoreResult",
  "Service",
  "ServiceProvider",
  "SpecialEducationProgramService",
  "StaffIdentificationCode",
  "StateEducationAgencyAccountability",
  "StateEducationAgencyFederalFunds",
  "StudentAssessmentItem",
  "StudentCharacteristic",
  "StudentIdentificationCode",
  "StudentIndicator",
  "StudentObjectiveAssessment",
  "Telephone",
  "===== Enumerations and Enumerated Collections =====",
  "===== String Simple Types =====",
  "===== Numeric Simple Types =====",
  "===== Domain Entities =====",
  "EdFiXFinance-BalanceSheetDimension",
  "EdFiXFinance-ChartOfAccount",
  "EdFiXFinance-FunctionDimension",
  "EdFiXFinance-FundDimension",
  "EdFiXFinance-LocalAccount",
  "EdFiXFinance-LocalActual",
  "EdFiXFinance-LocalBudget",
  "EdFiXFinance-ObjectDimension",
  "EdFiXFinance-OperationalUnitDimension",
  "EdFiXFinance-ProgramDimension",
  "EdFiXFinance-ProjectDimension",
  "EdFiXFinance-SourceDimension",
  "===== Descriptors =====",
  "EdFiXFinance-AccountTypeDescriptor",
  "EdFiXFinance-FinancialCollectionDescriptor",
  "EdFiXFinance-ReportingTagDescriptor",
  "===== Associations =====",
  "===== Extended Reference Types =====",
  "EdFiXFinance-BalanceSheetDimensionIdentityType",
  "EdFiXFinance-BalanceSheetDimensionReferenceType",
  "EdFiXFinance-ChartOfAccountIdentityType",
  "EdFiXFinance-ChartOfAccountReferenceType",
  "EdFiXFinance-FunctionDimensionIdentityType",
  "EdFiXFinance-FunctionDimensionReferenceType",
  "EdFiXFinance-FundDimensionIdentityType",
  "EdFiXFinance-FundDimensionReferenceType",
  "EdFiXFinance-LocalAccountIdentityType",
  "EdFiXFinance-LocalAccountReferenceType",
  "EdFiXFinance-LocalActualIdentityType",
  "EdFiXFinance-LocalActualReferenceType",
  "EdFiXFinance-LocalBudgetIdentityType",
  "EdFiXFinance-LocalBudgetReferenceType",
  "EdFiXFinance-ObjectDimensionIdentityType",
  "EdFiXFinance-ObjectDimensionReferenceType",
  "EdFiXFinance-OperationalUnitDimensionIdentityType",
  "EdFiXFinance-OperationalUnitDimensionReferenceType",
  "EdFiXFinance-ProgramDimensionIdentityType",
  "EdFiXFinance-ProgramDimensionReferenceType",
  "EdFiXFinance-ProjectDimensionIdentityType",
  "EdFiXFinance-ProjectDimensionReferenceType",
  "EdFiXFinance-SourceDimensionIdentityType",
  "EdFiXFinance-SourceDimensionReferenceType",
  "===== Extended Descriptor Reference Types =====",
  "===== Common Types =====",
  "EdFiXFinance-ReportingTag",
  "===== Enumerations and Enumerated Collections =====",
  "===== String Simple Types =====",
  "===== Numeric Simple Types =====",
]
`;

exports[`when generating xsd with extension and comparing it to data standard 3.1 authoritative artifacts should have core with no differences 1`] = `""`;

exports[`when generating xsd with extension and comparing it to data standard 3.1 authoritative artifacts should have schema annotation with no differences 1`] = `
" 1 file changed, 3 insertions(+)
"
`;

exports[`when generating xsd with extension and comparing it to data standard 3.1 authoritative artifacts should have simple types in the correct order 1`] = `
Array [
  "===== Domain Entities =====",
  "===== Descriptors =====",
  "===== Associations =====",
  "===== Base Types (borrowed from NEIM standards) =====",
  "===== Extended Reference Types =====",
  "===== Extended Descriptor Reference Types =====",
  "AbsenceEventCategoryDescriptorReferenceType",
  "AcademicHonorCategoryDescriptorReferenceType",
  "AcademicSubjectDescriptorReferenceType",
  "AccommodationDescriptorReferenceType",
  "AccountClassificationDescriptorReferenceType",
  "AchievementCategoryDescriptorReferenceType",
  "AdditionalCreditTypeDescriptorReferenceType",
  "AddressTypeDescriptorReferenceType",
  "AdministrationEnvironmentDescriptorReferenceType",
  "AdministrativeFundingControlDescriptorReferenceType",
  "AssessmentCategoryDescriptorReferenceType",
  "AssessmentIdentificationSystemDescriptorReferenceType",
  "AssessmentItemCategoryDescriptorReferenceType",
  "AssessmentItemResultDescriptorReferenceType",
  "AssessmentPeriodDescriptorReferenceType",
  "AssessmentReportingMethodDescriptorReferenceType",
  "AttemptStatusDescriptorReferenceType",
  "AttendanceEventCategoryDescriptorReferenceType",
  "BehaviorDescriptorReferenceType",
  "CalendarEventDescriptorReferenceType",
  "CalendarTypeDescriptorReferenceType",
  "CareerPathwayDescriptorReferenceType",
  "CharterApprovalAgencyTypeDescriptorReferenceType",
  "CharterStatusDescriptorReferenceType",
  "CitizenshipStatusDescriptorReferenceType",
  "ClassroomPositionDescriptorReferenceType",
  "CohortScopeDescriptorReferenceType",
  "CohortTypeDescriptorReferenceType",
  "CohortYearTypeDescriptorReferenceType",
  "CompetencyLevelDescriptorReferenceType",
  "ContactTypeDescriptorReferenceType",
  "ContentClassDescriptorReferenceType",
  "ContinuationOfServicesReasonDescriptorReferenceType",
  "CostRateDescriptorReferenceType",
  "CountryDescriptorReferenceType",
  "CourseAttemptResultDescriptorReferenceType",
  "CourseDefinedByDescriptorReferenceType",
  "CourseGPAApplicabilityDescriptorReferenceType",
  "CourseIdentificationSystemDescriptorReferenceType",
  "CourseLevelCharacteristicDescriptorReferenceType",
  "CourseRepeatCodeDescriptorReferenceType",
  "CredentialFieldDescriptorReferenceType",
  "CredentialTypeDescriptorReferenceType",
  "CreditTypeDescriptorReferenceType",
  "CurriculumUsedDescriptorReferenceType",
  "DeliveryMethodDescriptorReferenceType",
  "DiagnosisDescriptorReferenceType",
  "DiplomaLevelDescriptorReferenceType",
  "DiplomaTypeDescriptorReferenceType",
  "DisabilityDescriptorReferenceType",
  "DisabilityDesignationDescriptorReferenceType",
  "DisabilityDeterminationSourceTypeDescriptorReferenceType",
  "DisciplineActionLengthDifferenceReasonDescriptorReferenceType",
  "DisciplineDescriptorReferenceType",
  "EducationalEnvironmentDescriptorReferenceType",
  "EducationOrganizationCategoryDescriptorReferenceType",
  "EducationOrganizationIdentificationSystemDescriptorReferenceType",
  "EducationPlanDescriptorReferenceType",
  "ElectronicMailTypeDescriptorReferenceType",
  "EmploymentStatusDescriptorReferenceType",
  "EntryGradeLevelReasonDescriptorReferenceType",
  "EntryTypeDescriptorReferenceType",
  "EventCircumstanceDescriptorReferenceType",
  "ExitWithdrawTypeDescriptorReferenceType",
  "GradebookEntryTypeDescriptorReferenceType",
  "GradeLevelDescriptorReferenceType",
  "GradeTypeDescriptorReferenceType",
  "GradingPeriodDescriptorReferenceType",
  "GraduationPlanTypeDescriptorReferenceType",
  "GunFreeSchoolsActReportingStatusDescriptorReferenceType",
  "HomelessPrimaryNighttimeResidenceDescriptorReferenceType",
  "HomelessProgramServiceDescriptorReferenceType",
  "IdentificationDocumentUseDescriptorReferenceType",
  "IncidentLocationDescriptorReferenceType",
  "InstitutionTelephoneNumberTypeDescriptorReferenceType",
  "InteractivityStyleDescriptorReferenceType",
  "InternetAccessDescriptorReferenceType",
  "InterventionClassDescriptorReferenceType",
  "InterventionEffectivenessRatingDescriptorReferenceType",
  "LanguageDescriptorReferenceType",
  "LanguageInstructionProgramServiceDescriptorReferenceType",
  "LanguageUseDescriptorReferenceType",
  "LearningStandardCategoryDescriptorReferenceType",
  "LevelOfEducationDescriptorReferenceType",
  "LicenseStatusDescriptorReferenceType",
  "LicenseTypeDescriptorReferenceType",
  "LimitedEnglishProficiencyDescriptorReferenceType",
  "LocaleDescriptorReferenceType",
  "LocalEducationAgencyCategoryDescriptorReferenceType",
  "MagnetSpecialProgramEmphasisSchoolDescriptorReferenceType",
  "MediumOfInstructionDescriptorReferenceType",
  "MethodCreditEarnedDescriptorReferenceType",
  "MigrantEducationProgramServiceDescriptorReferenceType",
  "MonitoredDescriptorReferenceType",
  "NeglectedOrDelinquentProgramDescriptorReferenceType",
  "NeglectedOrDelinquentProgramServiceDescriptorReferenceType",
  "NetworkPurposeDescriptorReferenceType",
  "OldEthnicityDescriptorReferenceType",
  "OperationalStatusDescriptorReferenceType",
  "OtherNameTypeDescriptorReferenceType",
  "ParticipationDescriptorReferenceType",
  "PerformanceBaseConversionDescriptorReferenceType",
  "PerformanceLevelDescriptorReferenceType",
  "PersonalInformationVerificationDescriptorReferenceType",
  "PopulationServedDescriptorReferenceType",
  "PostingResultDescriptorReferenceType",
  "PostSecondaryEventCategoryDescriptorReferenceType",
  "PostSecondaryInstitutionLevelDescriptorReferenceType",
  "ProficiencyDescriptorReferenceType",
  "ProgramAssignmentDescriptorReferenceType",
  "ProgramCharacteristicDescriptorReferenceType",
  "ProgramSponsorDescriptorReferenceType",
  "ProgramTypeDescriptorReferenceType",
  "ProgressDescriptorReferenceType",
  "ProgressLevelDescriptorReferenceType",
  "ProviderCategoryDescriptorReferenceType",
  "ProviderProfitabilityDescriptorReferenceType",
  "ProviderStatusDescriptorReferenceType",
  "PublicationStatusDescriptorReferenceType",
  "RaceDescriptorReferenceType",
  "ReasonExitedDescriptorReferenceType",
  "ReasonNotTestedDescriptorReferenceType",
  "RecognitionTypeDescriptorReferenceType",
  "RelationDescriptorReferenceType",
  "RepeatIdentifierDescriptorReferenceType",
  "ReporterDescriptionDescriptorReferenceType",
  "ResidencyStatusDescriptorReferenceType",
  "ResponseIndicatorDescriptorReferenceType",
  "ResponsibilityDescriptorReferenceType",
  "RestraintEventReasonDescriptorReferenceType",
  "ResultDatatypeTypeDescriptorReferenceType",
  "RetestIndicatorDescriptorReferenceType",
  "SchoolCategoryDescriptorReferenceType",
  "SchoolChoiceImplementStatusDescriptorReferenceType",
  "SchoolFoodServiceProgramServiceDescriptorReferenceType",
  "SchoolTypeDescriptorReferenceType",
  "SectionCharacteristicDescriptorReferenceType",
  "SeparationDescriptorReferenceType",
  "SeparationReasonDescriptorReferenceType",
  "ServiceDescriptorReferenceType",
  "SexDescriptorReferenceType",
  "SpecialEducationProgramServiceDescriptorReferenceType",
  "SpecialEducationSettingDescriptorReferenceType",
  "StaffClassificationDescriptorReferenceType",
  "StaffIdentificationSystemDescriptorReferenceType",
  "StaffLeaveEventCategoryDescriptorReferenceType",
  "StateAbbreviationDescriptorReferenceType",
  "StudentCharacteristicDescriptorReferenceType",
  "StudentIdentificationSystemDescriptorReferenceType",
  "StudentParticipationCodeDescriptorReferenceType",
  "TeachingCredentialBasisDescriptorReferenceType",
  "TeachingCredentialDescriptorReferenceType",
  "TechnicalSkillsAssessmentDescriptorReferenceType",
  "TelephoneNumberTypeDescriptorReferenceType",
  "TermDescriptorReferenceType",
  "TitleIPartAParticipantDescriptorReferenceType",
  "TitleIPartASchoolDesignationDescriptorReferenceType",
  "TribalAffiliationDescriptorReferenceType",
  "VisaDescriptorReferenceType",
  "WeaponDescriptorReferenceType",
  "===== Common Types =====",
  "===== Enumerations and Enumerated Collections =====",
  "SchoolYearType",
  "===== String Simple Types =====",
  "AccountCodeCategory",
  "AccountCodeDescription",
  "AccountCodeNumber",
  "AccountIdentifier",
  "AccountName",
  "AchievementCategorySystem",
  "AchievementTitle",
  "AddressLine",
  "AlternateDayName",
  "ApartmentRoomSuiteNumber",
  "AssessmentFamily",
  "AssessmentForm",
  "AssessmentResponse",
  "AssessmentTitle",
  "AttendanceEventReason",
  "Author",
  "BellScheduleName",
  "BirthInternationalProvince",
  "BuildingSiteNumber",
  "CaseNumber",
  "CIPCode",
  "City",
  "ClassPeriodName",
  "ClassroomIdentificationCode",
  "CodeValue",
  "CohortDescription",
  "CohortIdentifier",
  "CongressionalDistrict",
  "ContactRestrictions",
  "ContactTitle",
  "ContentIdentifier",
  "ContentStandardName",
  "ContentStandardTitle",
  "ContentStandardVersion",
  "ContentVersion",
  "Coordinate",
  "CorrectResponse",
  "CountyFIPSCode",
  "CourseSetName",
  "CourseTitle",
  "CredentialCode",
  "CredentialEndorsement",
  "Criteria",
  "Department",
  "Description",
  "DescriptorReferenceType",
  "DesignatedBy",
  "DiagnosticStatement",
  "DiplomaDescription",
  "DisabilityDiagnosis",
  "DisciplineActionIdentifier",
  "DocumentTitle",
  "ElectronicMailAddress",
  "ExternalTerm",
  "FirstName",
  "GenerationCodeSuffix",
  "GradebookEntryTitle",
  "GradeEarned",
  "GradeValueQualifier",
  "HonorDescription",
  "IdentificationCode",
  "IncidentIdentifier",
  "Indicator",
  "IndicatorName",
  "IssuerName",
  "LastSurname",
  "LearningResourceMetadataURI",
  "LearningStandardId",
  "LicenseIdentifier",
  "LicensingOrganization",
  "LocalCourseCode",
  "MiddleName",
  "NameOfCounty",
  "NameOfInstitution",
  "Nomenclature",
  "Objective",
  "PersonalTitlePrefix",
  "PositionTitle",
  "PostalCode",
  "ProfileThumbnail",
  "ProgramId",
  "ProgramName",
  "Publisher",
  "Rating",
  "RatingOrganization",
  "RatingProgram",
  "RatingTitleType",
  "Reason",
  "RecognitionDescription",
  "ReporterName",
  "RequisitionNumber",
  "RestraintEventIdentifier",
  "Result",
  "SectionIdentifier",
  "ServiceCategory",
  "ShortDescription",
  "Statement",
  "StreetNumberName",
  "TelephoneNumber",
  "TimeInterval",
  "UniqueId",
  "URI",
  "WeekIdentifier",
  "===== Numeric Simple Types =====",
  "AgeAuthorizedToServe",
  "AssessmentVersion",
  "Capacity",
  "CreditConversion",
  "CreditsValue",
  "Currency",
  "DisciplineActionLength",
  "Dosage",
  "Duration",
  "EventDuration",
  "GPA",
  "HoursAbsent",
  "HoursPerWeek",
  "Learning",
  "MaxCompletionsForCredit",
  "NumberOfDaysAbsent",
  "NumberOfDaysInAttendance",
  "NumberOfDaysTardy",
  "NumberOfParts",
  "NumberOfYears",
  "NumericGrade",
  "OrderOfPriority",
  "Percent",
  "SequenceOfCourse",
  "TotalInstructionalDays",
  "===== Domain Entities =====",
  "===== Descriptors =====",
  "===== Associations =====",
  "===== Extended Reference Types =====",
  "===== Extended Descriptor Reference Types =====",
  "EdFiXFinance-AccountTypeDescriptorReferenceType",
  "EdFiXFinance-FinancialCollectionDescriptorReferenceType",
  "EdFiXFinance-ReportingTagDescriptorReferenceType",
  "===== Common Types =====",
  "===== Enumerations and Enumerated Collections =====",
  "===== String Simple Types =====",
  "EdFiXFinance-Code",
  "EdFiXFinance-CodeName",
  "EdFiXFinance-TagValue",
  "===== Numeric Simple Types =====",
  "EdFiXFinance-FiscalYear",
]
`;
